backend bitti gibi
