# swagger.json
@@ -16,6 +16,7 @@
   "paths": {
     "/users": {
       "get": {
+        "tags": ["users"],
         "summary": "Retrieve a list of JSONPlaceholder users.",
         "description": "Retrieve a list of users from JSONPlaceholder.",
         "responses": {
@@ -54,6 +55,7 @@
     },
     "/users/{id}": {
       "get": {
+        "tags": ["users"],
         "summary": "Retrieve a single JSONPlaceholder user.",
         "description": "Retrieve a single JSONPlaceholder user. Can be used to populate a user profile when prototyping or testing an API.",
         "parameters": [
@@ -63,7 +65,7 @@
             "required": true,
             "description": "Numeric ID of the user to retrieve.",
             "schema": {
-              "type": "integer"
+              "$ref": "#/definitions/User"
             }
           }
         ],
@@ -100,6 +102,7 @@
     },
     "/tweets": {
       "get": {
+        "tags": ["tweets"],
         "summary": "Retrieve a list of JSONPlaceholder users.",
         "description": "Retrieve a list of users from JSONPlaceholder. Can be used to populate a list of fake users when prototyping or testing an API.",
         "responses": {
@@ -139,10 +142,65 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": ["tweets"],
+        "summary": "Retrieve a list of JSONPlaceholder users.",
+        "description": "Retrieve a list of users from JSONPlaceholder. Can be used to populate a list of fake users when prototyping or testing an API.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "tweet  body",
+            "required": true,
+            "description": "Numeric ID of the user and tweet content.",
+            "schema": {
+              "$ref": "#/definitions/Tweet",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of tweets.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "description": "The user ID.",
+                            "example": 0
+                          },
+                          "user_id": {
+                            "type": "integer",
+                            "description": "The user ID.",
+                            "example": 0
+                          },
+                          "tweet_content": {
+                            "type": "string",
+                            "description": "The user's tweet.",
+                            "example": "Leanne Graham"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/tweets/{id}": {
       "get": {
+        "tags": ["tweets"],
         "summary": "Retrieve a single JSONPlaceholder user.",
         "description": "Retrieve a single JSONPlaceholder user. Can be used to populate a user profile when prototyping or testing an API.",
         "parameters": [
@@ -152,6 +210,7 @@
             "required": true,
             "description": "Numeric ID of the user to retrieve.",
             "schema": {
+              "$ref": "#/definitions/Tweet",
               "type": "integer"
             }
           }
@@ -183,6 +242,79 @@
                 }
               }
             }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["tweets"],
+        "summary": "Retrieve a single JSONPlaceholder user.",
+        "description": "Retrieve a single JSONPlaceholder user. Can be used to populate a user profile when prototyping or testing an API.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "Numeric ID of the user to retrieve.",
+            "schema": {
+              "$ref": "#/definitions/Tweet",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A single user.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer",
+                          "description": "The user ID.",
+                          "example": 0
+                        },
+                        "username": {
+                          "type": "string",
+                          "description": "The user's name.",
+                          "example": "Leanne Graham"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "definitions": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "username": {
+            "type": "string"
+          }
+        }
+      },
+
+      "Tweet": {
+        "type": "object",
+        "properties": {
+          "user_id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "content": {
+            "type": "string"
           }
         }
       }
